--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,8 +23,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        python -c "import mytest"
+        # python -c "import mytest"
     - name: Test with pytest
-      working-directory: ./mytest/tests
+      working-directory: ./mytest/
       run: |
         pytest
