--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        # python -c "import mytest/temp"
+        python -c "import mytest/temp"
     - name: Test with pytest
       working-directory: ./mytest/
       run: |
