--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,6 +25,6 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         python -c "import src.temp as temp"
     - name: Test with pytest
-      working-directory: ./mytest/
+      working-directory: ./src/
       run: |
         pytest
