--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,6 @@ jobs:
         pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
-      working-directory: ./src/
       run: |
-        python -c "import temp as temp"
-        pytest
+        python -c "import tempo"
+        pytest ./tests/
