--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,5 +25,6 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        python -c "import src.tempo"
-        pytest ./tests/
+        python -c "import src.tempo as tempo"
+        working-directory: ./src/tempo
+        pytest
