--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,5 +26,6 @@ jobs:
         pip install -e .
 
     - name: Test with pytest
+      working-directory: ./src/tempo/
       run: |
         pytest
