--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -U mypy
         pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install -e ./src/
