--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,9 +24,9 @@ jobs:
         pip install -U mypy
         pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install -e ./src/
+        pip install -e ./etl/
 
     - name: Test with pytest
-      working-directory: ./src/tempo/
+      working-directory: ./etl/src/
       run: |
         pytest
