--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,15 +18,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -U mypy
-        pip install pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install -e ./etl/
 
-    - name: Test with pytest
-      working-directory: ./etl/src/
-      run: |
-        pytest
+    - name: Test 
+      environment: test
+      run: echo $MY_NAME
