--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,9 +8,10 @@ on:
     branches: [ master ]
 
 jobs:
-  deployment:
+  build:
 
     runs-on: ubuntu-latest
+    environment: test
 
     steps:
     - uses: actions/checkout@v2
@@ -20,5 +21,4 @@ jobs:
         python-version: "3.10"
 
     - name: Test 
-      environment: test
       run: echo $MY_NAME
