--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,21 +1,26 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: Python application
+name: ETL unit tests
 
 on:
-  pull_request:
-    branches: [ master ]
+  push:
+    paths:
+      - 'etl/**'
 
 jobs:
-  build:
-
+  tests:
     runs-on: ubuntu-latest
     environment: test
 
     steps:
-      - shell: bash
-        env:
-          MY_NAME: ${{ secrets.MY_NAME }}
+      - uses: actions/checkout@v2
+
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.7.10"
+
+      - name: Install dependencies and run tests
+        working-directory: ./etl
         run: |
-          echo "$MY_NAME"
+          pip install pipenv pytest
+          pipenv install '-e .'
+          pipenv run pytest
